[gd_scene load_steps=10 format=2]

[ext_resource path="res://Root.gd" type="Script" id=1]
[ext_resource path="res://tools/containers/beaker/Beaker.tscn" type="PackedScene" id=2]
[ext_resource path="res://tools/heaters/burner/Burner.tscn" type="PackedScene" id=3]
[ext_resource path="res://tools/dispenser/Dispenser.tscn" type="PackedScene" id=4]
[ext_resource path="res://samples/abdon.tscn" type="PackedScene" id=5]
[ext_resource path="res://default_theme.tres" type="Theme" id=6]
[ext_resource path="res://Sim.gd" type="Script" id=7]
[ext_resource path="res://addons/carmel4a97.RTS_Camera2D/RTS-Camera2D.gd" type="Script" id=8]
[ext_resource path="res://addons/carmel4a97.RTS_Camera2D/node_icon.png" type="Texture" id=9]

[node name="Root" type="Node2D"]
script = ExtResource( 1 )
tools = [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ) ]
samples = [ ExtResource( 5 ) ]

[node name="Control" type="CanvasLayer" parent="."]
layer = 51

[node name="HBoxContainer" type="HBoxContainer" parent="Control"]
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = 410.0
margin_bottom = -8.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 6 )

[node name="PanelContainer" type="Control" parent="Control/HBoxContainer"]
margin_right = 238.0
margin_bottom = 584.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Control/HBoxContainer/PanelContainer"]
margin_left = 10.5
margin_top = 8.0
margin_right = 230.5
margin_bottom = 592.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="ToolsList" type="ItemList" parent="Control/HBoxContainer/PanelContainer/VBoxContainer"]
margin_right = 220.0
margin_bottom = 540.0
mouse_filter = 1
size_flags_vertical = 3
items = [ "", null, false ]
select_mode = 1
icon_scale = 0.1

[node name="AddToolButton" type="Button" parent="Control/HBoxContainer/PanelContainer/VBoxContainer"]
margin_top = 545.0
margin_right = 220.0
margin_bottom = 584.0
mouse_filter = 1
text = "Add Tool"

[node name="SampleList" type="ItemList" parent="Control/HBoxContainer/PanelContainer/VBoxContainer"]
visible = false
margin_top = 294.0
margin_right = 220.0
margin_bottom = 539.0
mouse_filter = 1
size_flags_vertical = 3

[node name="AddSampleButton" type="Button" parent="Control/HBoxContainer/PanelContainer/VBoxContainer"]
visible = false
margin_top = 545.0
margin_right = 220.0
margin_bottom = 584.0
mouse_filter = 1
text = "Add Sample"

[node name="VBoxContainer" type="VBoxContainer" parent="Control/HBoxContainer"]
margin_left = 243.0
margin_right = 402.0
margin_bottom = 584.0
size_flags_vertical = 3

[node name="HideButton" type="CheckButton" parent="Control/HBoxContainer/VBoxContainer"]
margin_right = 159.0
margin_bottom = 48.0
size_flags_vertical = 0
text = "Hide Panel"

[node name="PaintButton" type="CheckButton" parent="Control/HBoxContainer/VBoxContainer"]
margin_top = 53.0
margin_right = 159.0
margin_bottom = 101.0
text = "Paint Mode"

[node name="GridButton" type="CheckButton" parent="Control/HBoxContainer/VBoxContainer"]
margin_top = 106.0
margin_right = 159.0
margin_bottom = 154.0
disabled = true
pressed = true
text = "Hide Grid"

[node name="ClearButton" type="Button" parent="Control/HBoxContainer/VBoxContainer"]
margin_top = 159.0
margin_right = 159.0
margin_bottom = 198.0
text = "Clear World"
flat = true
align = 0

[node name="Sim" type="Node2D" parent="."]
script = ExtResource( 7 )

[node name="RTS-Camera2D" type="Camera2D" parent="."]
position = Vector2( 510, 305 )
current = true
drag_margin_left = 0.1
drag_margin_top = 0.1
drag_margin_right = 0.1
drag_margin_bottom = 0.1
script = ExtResource( 8 )
__meta__ = {
"_editor_icon": ExtResource( 9 )
}
zoom_out_limit = 16
camera_speed = 900

[node name="ReactionTimer" type="Timer" parent="."]
wait_time = 0.1
autostart = true
[connection signal="item_activated" from="Control/HBoxContainer/PanelContainer/VBoxContainer/ToolsList" to="." method="_on_ToolsList_item_activated"]
[connection signal="pressed" from="Control/HBoxContainer/PanelContainer/VBoxContainer/AddToolButton" to="." method="_on_AddToolButton_pressed"]
[connection signal="pressed" from="Control/HBoxContainer/PanelContainer/VBoxContainer/AddSampleButton" to="." method="_on_AddSampleButton_pressed"]
[connection signal="pressed" from="Control/HBoxContainer/VBoxContainer/HideButton" to="." method="_on_HideButton_pressed"]
[connection signal="pressed" from="Control/HBoxContainer/VBoxContainer/ClearButton" to="." method="_on_ClearButton_pressed"]
[connection signal="timeout" from="ReactionTimer" to="Sim" method="_on_ReactionTimer_timeout"]
